# Windows-MCP

./: .gitignore  .mcpbignore  Build.ps1  CLAUDE.md  README.md  REVIEW.md  TODO.md  USER_MANUAL.md  manifest.json  pyproject.toml
.claude/: CLAUDE.md
.claude/context/: CONTEXT_INDEX.json  LATEST_CONTEXT.md  windows-mcp-context-20260218.md  windows-mcp-context-20260219.md  windows-mcp-context-20260219b.md  windows-mcp-context-20260220.md
.claude/context/slices/: performance-slice.md  python-slice.md  rust-slice.md  security-slice.md  test-slice.md
.claude/plans/: windows-mcp-phase2-plan.md
mcp-configs/: README.md  claude-code.json  codex-cli.toml  gemini-cli.json  pc-ai-agent.json
native/: Cargo.toml  pyproject.toml
native/src/: errors.rs  input.rs  lib.rs  system_info.rs
native/src/tree/: element.rs  mod.rs
native/wmcp-cli/: Cargo.toml
native/wmcp-core/: Cargo.toml
native/wmcp-core/src/: com.rs  errors.rs  input.rs  lib.rs  pattern.rs  query.rs  screenshot.rs  system_info.rs  window.rs
native/wmcp-core/src/tree/: element.rs  mod.rs
native/wmcp-ffi/: Cargo.toml
native/wmcp-ffi/src/: lib.rs
native/wmcp-pyo3/: Cargo.toml
native/wmcp-pyo3/src/: lib.rs
src/windows_mcp/: __main__.py  analytics.py  native.py  native_ffi.py  native_worker.py
src/windows_mcp/auth/: __init__.py  key_manager.py  middleware.py  service.py
src/windows_mcp/desktop/: config.py  service.py  views.py
src/windows_mcp/filesystem/: __init__.py  service.py
src/windows_mcp/input/: __init__.py  service.py
src/windows_mcp/process/: __init__.py  service.py
src/windows_mcp/registry/: __init__.py  service.py
src/windows_mcp/scraper/: __init__.py  service.py
src/windows_mcp/screen/: __init__.py  service.py
src/windows_mcp/shell/: __init__.py  service.py
src/windows_mcp/tools/: __init__.py  _helpers.py  _state.py  input_tools.py  state_tools.py  system_tools.py
src/windows_mcp/tree/: cache_utils.py  config.py  service.py  utils.py  views.py
src/windows_mcp/uia/: __init__.py  constants.py  controls.py  core.py  enums.py  patterns.py
src/windows_mcp/vdm/: __init__.py  core.py
src/windows_mcp/vision/: __init__.py  service.py
src/windows_mcp/watchdog/: __init__.py  event_handlers.py  service.py
src/windows_mcp/window/: __init__.py  service.py
tests/: conftest.py  desktop_helpers.py  test_analytics.py  test_auth_key_manager.py  test_auth_middleware.py  test_auth_service.py  test_classify_rust_tree.py  test_desktop_methods.py  test_desktop_review_fixes.py  test_desktop_views.py  test_filesystem.py  test_filesystem_service.py  test_filesystem_views.py  test_fuzz_security.py  test_get_state.py  test_input_service.py  test_live_com.py  test_live_patterns.py  test_main_coverage.py  test_mcp_integration.py  test_native.py  test_native_adapter.py  test_native_integration.py  test_native_layer_gaps.py  test_performance.py  test_process_service.py  test_registry.py  test_registry_service.py  test_scraper_service.py  test_screen_service.py  test_security.py  test_shell_service.py  test_system_info.py  test_tree_service.py  test_tree_utils.py  test_vdm_service.py  test_vision.py  test_watchdog.py  test_window_service.py  test_xpath_methods.py
