[package]
name = "windows_mcp_core"
version = "0.1.0"
edition = "2021"
description = "PyO3 Rust extension accelerating hot paths in the Windows-MCP server"
license = "MIT"
rust-version = "1.80"

[lib]
name = "windows_mcp_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
sysinfo = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"

# Future: uncomment for tree traversal acceleration
# windows = { version = "0.58", features = ["Win32_UI_Accessibility", "Win32_System_Com"] }
# rayon = "1.10"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1
