[workspace]
members = ["wmcp-core", "wmcp-pyo3", "wmcp-ffi", "wmcp-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
# Windows APIs
windows = { version = "0.58", features = [
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    # DXGI Output Duplication (screenshot)
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrency
parking_lot = "0.12"
rayon = "1.10"

# System info
sysinfo = "0.33"

# Error handling
thiserror = "2.0"

# Logging
log = "0.4"

# Python bindings
pyo3 = { version = "0.23", features = ["extension-module"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Core library (internal)
wmcp-core = { path = "wmcp-core" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1
