[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "windows-mcp-core"
version = "0.1.0"
description = "PyO3 Rust extension accelerating hot paths in the Windows-MCP server"
license = { text = "MIT" }
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Development Status :: 3 - Alpha",
]

[tool.maturin]
# Point maturin at the PyO3 crate within the workspace
manifest-path = "wmcp-pyo3/Cargo.toml"
module-name = "windows_mcp_core"
bindings = "pyo3"
strip = true
