[package]
name = "wmcp-core"
description = "Pure Rust core library for Windows-MCP -- no PyO3 dependency"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "wmcp_core"
crate-type = ["lib"]

[dependencies]
windows = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
